[package]
name = "dummy-json-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
