[package]
name = "dummy-json-rs"
description = "Dummy JSON API client in Rust"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/abhi3700/dummy-json-rs"
license = "MIT"

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
